@@ -8,8 +8,8 @@ android {
         applicationId "org.moire.opensudoku"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 20200115
-        versionName "2.7.0"
+        versionCode 20200204
+        versionName "3.0.0"
 
         vectorDrawables {
             useSupportLibrary true
