@@ -281,4 +281,35 @@
     <string name="puzzle_solvable">Este puzzle tiene solución.</string>
 
     <string name="copy_from_existing_theme">Copiar del tema existente…</string>
+
+    <!-- Strings added/changed in 3.0.0 -->
+    <string name="theme_default">Oscuro</string>
+    <string name="theme_amoled">AMOLED</string>
+    <string name="theme_latte">Latte de caramelo</string>
+    <string name="theme_espresso">Café exprés</string>
+    <string name="theme_sunrise">Amanecer</string>
+    <string name="theme_honeybee">Miel de abeja</string>
+    <string name="theme_crystal">Cristal</string>
+    <string name="theme_midnight_blue">Azul medianoche</string>
+    <string name="theme_emerald">Esmeralda</string>
+    <string name="theme_forest">Bosque</string>
+    <string name="theme_amethyst">Amatista</string>
+    <string name="theme_ruby">Rubí</string>
+
+    <string name="is_light_theme_summary">Cambiar si los colores de la aplicación se basan en el tema claro u oscuro.</string>
+    <string name="is_light_theme_title">Tema claro</string>
+    <string name="app_color_primary_summary">Este color se usa para el fondo de la barra de título.</string>
+    <string name="app_color_primary_title">Color primario de la aplicación</string>
+    <string name="app_color_secondary_summary">Este color se usa para la barra de estado de Android y suele ser una versión más oscura del color primario de la aplicación.</string>
+    <string name="app_color_secondary_title">Color secundario de la aplicación</string>
+    <string name="app_color_accent_summary">Este color se usa para acentuar varios controles de la interfaz.</string>
+    <string name="app_color_accent_title">Color de acento de la aplicación</string>
+    <string name="app_color_button_summary">Este color se usa para los botones de la interfaz.</string>
+    <string name="app_color_button_title">Color de los botones de la aplicación</string>
+
+    <string name="highlight_similar_notes">Resaltar notas similares</string>
+    <string name="highlight_similar_notes_summary">Resaltar celdas con valores de notas similares</string>
+
+    <string name="resume">Continuar</string>
+    <string name="sudoku_lists">Lista de Sudokus</string>
 </resources>
